# it_inno_hack

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: Architecture.md  __init__.py  custom_dataframe.py  duplicate_finder.py  processor.py  similarity_system.py  word2vec.py
app/cleaners/: __init__.py  base_cleaner.py  birthdate_cleaner.py  email_cleaner.py  name_cleaner.py  phone_cleaner.py
app/ml/: clustering.py  word2vec.py
docker-compose/: docker-compose.yaml
docker-compose/docker-entrypoint-initdb.d/: 00_initial_datasets_tables.sh
notebooks/: clickhouse_connect.ipynb  data_analitics.ipynb  merge_tables.ipynb
src/: encoders.py  main.py  metrics.py
