[tool.poetry]
name = "it-inno-hack"
version = "0.1.0"
description = ""
authors = ["team 4U"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
phonenumbers = "^8.13.46"
nameparser = "^1.1.3"
usaddress = "^0.5.10"
python-dateutil = "^2.9.0.post0"
recordlinkage = {extras = ["all"], version = "^0.16"}
clickhouse-driver = "^0.2.9"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
black = {extras = ["jupyter"], version = "^24.8.0"}
tqdm = "^4.66.5"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
